--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,6 +1,31 @@
 @import "reset";
+@import "variables";
 
 
-body, html {
-  background-color: #777777;
+html {
+  color: white;
+  .bodyText();
+
+  height: 100%;
+
+  background-color: #00A3EF;
+
+  background-image: -ms-linear-gradient(top left, #000000 0%, #00A3EF 100%);
+  background-image: -moz-linear-gradient(top left, #000000 0%, #00A3EF 100%);
+  background-image: -o-linear-gradient(top left, #000000 0%, #00A3EF 100%);
+  background-image: -webkit-gradient(linear, left top, right bottom, color-stop(0, #000000), color-stop(1, #00A3EF));
+  background-image: -webkit-linear-gradient(top left, #000000 0%, #00A3EF 100%);
+  background-image: linear-gradient(to bottom right, #000000 0%, #00A3EF 100%);
 }
+
+body {
+  padding-top: @navHeight;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  .headlineText();
+  font-weight: bold;
+}
+
+@import '../components/directives/navBar/navBar';
+@import '../components/directives/footerNav/footerNav';
