--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -29,3 +29,5 @@ h1, h2, h3, h4, h5, h6 {
 
 @import '../components/directives/navBar/navBar';
 @import '../components/directives/footerNav/footerNav';
+
+@import '../views/home/home';
