--- a/src/views/home/home.tpl.html
+++ b/src/views/home/home.tpl.html
@@ -1,3 +1,12 @@
-<section>
-    <h1>Home</h1>
-</section>
+<div class="home">
+    <h1 class="name">Aaron Willows</h1>
+
+    <ul class="main-menu">
+        <li><a href="#/portfolio">Portfolio</a></li>
+        <li><a href="#/resume">Resume</a></li>
+        <li><a href="#/about">About</a></li>
+        <li><a href="#/contact">Contact</a></li>
+    </ul>
+
+    <p class="hero-text">Front End / JavaScript / UX Developer</p>
+</div>
