Added portfolio page.

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -29,5 +29,7 @@ h1, h2, h3, h4, h5, h6 {
 
 @import '../components/directives/navBar/navBar';
 @import '../components/directives/footerNav/footerNav';
+@import '../components/directives/projectTile/projectTile';
 
 @import '../views/home/home';
+@import '../views/portfolio/portfolio';
