Refactored less files a bit.

--- a/src/components/directives/navBar/navBar.tpl.html
+++ b/src/components/directives/navBar/navBar.tpl.html
@@ -6,7 +6,7 @@
             <li><a ng-class="{'current': currentItem.name === 'portfolio'}" href="#/portfolio">Portfolio</a></li>
             <li><a ng-class="{'current': currentItem.name === 'resume'}" href="#/resume">Resume</a></li>
             <li><a ng-class="{'current': currentItem.name === 'about'}" href="#/about">About</a></li>
-            <li><a ng-class="{'current': currentItem.name === 'contact'}" class="contact" href="#/contact"><i class="fa fa-send"></i>  Contact</a></li>
+            <li><a ng-class="{'current': currentItem.name === 'contact'}" class="important-link" href="#/contact"><i class="fa fa-send"></i>  Contact</a></li>
         </ul>
     </nav>
 </div>
