--- a/src/components/directives/projectTile/projectTile.less
+++ b/src/components/directives/projectTile/projectTile.less
@@ -1,6 +1,6 @@
 .project-tile {
 
-  background-color: #515151;
+  background-color: @panelBackgroundColor;
   padding-bottom: 1rem;
   padding-top: 1rem;
 
@@ -16,10 +16,12 @@
     padding-left: .5rem;
     padding-top: .5rem;
     max-width: 66%;
+
   }
 
   h2 {
     display: inline-block;
+    font-size: 1.5rem;
   }
 
   ul {
@@ -38,7 +40,7 @@
   }
 
   .project-link {
-    font-size: 1.1rem;
+    font-size: 1.5rem;
     color: gold;
     text-shadow: 1px 1px 0 rgba(140,140,140,0.6) , -1px -1px 1px rgba(0,0,0,0.67) ;
     text-decoration: none;
@@ -51,6 +53,7 @@
 
   .project-info {
     margin-top: 1rem;
+    font-size: 1.25rem;
   }
 
   .link-screenshot {
@@ -60,6 +63,11 @@
   .note {
     font-size: .5rem;
     vertical-align: super;
+  }
+
+  strong {
+    font-weight: bold;
+    color: lightskyblue;
   }
 
 
