--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -11,3 +11,17 @@
 .bodyText() {
   font-family: 'Roboto Slab', serif;
 }
+
+
+
+// Text Colors ////////////////////////////////////////////////////////////////////////////////////////////////////////
+@copyTextColor: white;
+@strongTextColor: lightskyblue;
+@importantLinkColor: gold;
+@normalLinkColor: #CCC;
+@linkHover: #DDD;
+@linkShadow: 1px 1px 0 rgba(140,140,140,0.6) , -1px -1px 1px rgba(0,0,0,0.67);
+
+// Panel Colors ///////////////////////////////////////////////////////////////////////////////////////////////////////
+@panelBackgroundColor: #515151;
+@menuBackgroundColor: #000000;
