--- a/src/components/directives/footerNav/footerNav.less
+++ b/src/components/directives/footerNav/footerNav.less
@@ -3,7 +3,7 @@
 
   text-align: right;
   bottom:0;
-  background-color: #000000;
+  background-color: @menuBackgroundColor;
   width: 100%;
 
   height: @navHeight;
@@ -19,19 +19,6 @@
 
 
   a {
-    color: gold;
-    text-shadow: 1px 1px 0 rgba(140,140,140,0.6) , -1px -1px 1px rgba(0,0,0,0.67) ;
-    text-decoration: none;
     text-transform: capitalize;
   }
-
-  a:hover {
-    color: #DDD;
-    text-decoration: underline;
-  }
-
-  .contact {
-    color: gold;
-  }
-
 }
