--- a/src/components/directives/footerNav/footerNav.tpl.html
+++ b/src/components/directives/footerNav/footerNav.tpl.html
@@ -1,3 +1,3 @@
 <div class="footer-nav">
-    <a href="{{ nextItem.url }}">{{ nextItem.name }} <i class="fa fa-arrow-right"></i></a>
+    <a class="important-link" href="{{ nextItem.url }}">{{ nextItem.name }} <i class="fa fa-arrow-right"></i></a>
 </div>
