--- a/src/components/directives/navBar/navBar.less
+++ b/src/components/directives/navBar/navBar.less
@@ -2,7 +2,7 @@
   position:fixed;
 
   top:0;
-  background-color: #000000;
+  background-color: @menuBackgroundColor;
   width: 100%;
 
   height: @navHeight;
@@ -44,18 +44,10 @@
 
   a {
     font-size: 1.5rem;
-    color: #CCC;
-    text-shadow: 1px 1px 0 rgba(140,140,140,0.6) , -1px -1px 1px rgba(0,0,0,0.67) ;
-    text-decoration: none;
   }
 
   a:hover {
-    color: #DDD;
     text-decoration: underline;
-  }
-
-  .contact {
-    color: gold;
   }
 
   .current {
