--- a/src/views/home/home.less
+++ b/src/views/home/home.less
@@ -15,8 +15,6 @@
     padding-right: 25%;
   }
 
-
-
   .middle {
     text-align: center;
   }
@@ -25,7 +23,7 @@
   .main-menu {
     text-align: center;
 
-    background-color: #515151;
+    background-color: @panelBackgroundColor;
 
     padding-bottom: .1rem;
     padding-top: .1rem;
@@ -35,15 +33,8 @@
 
     font-size: 2rem;
 
-    a {
-      color: #CCC;
-      text-shadow: 1px 1px 0 rgba(140,140,140,0.6) , -1px -1px 1px rgba(0,0,0,0.67) ;
-      text-decoration: none;
-    }
-
     a:hover {
-      color: gold;
-
+      color: @importantLinkColor;
     }
 
     li {
