Added github link. Fixed bug where important link hover styles were broken.

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -42,6 +42,9 @@ a.important-link {
   color: @importantLinkColor;
 }
 
+a.important-link:hover {
+  color: @linkHover;
+}
 
 @import '../components/directives/navBar/navBar';
 @import '../components/directives/footerNav/footerNav';
