--- a/src/views/portfolio/portfolio.less
+++ b/src/views/portfolio/portfolio.less
@@ -10,4 +10,19 @@
   .project-tile {
     margin-bottom: 1rem;
   }
+
+
+  .github-text {
+    text-align: center;
+  }
+  .github {
+    max-width: 4rem;
+    max-height: 4rem;
+    vertical-align: middle;
+  }
+
+  .github-text {
+    font-size: 1.25rem;
+    margin-bottom: 2rem;
+  }
 }
