--- a/src/views/portfolio/portfolio.tpl.html
+++ b/src/views/portfolio/portfolio.tpl.html
@@ -1,6 +1,8 @@
 <div class="portfolio">
     <h1>Portfolio</h1>
 
+    <p class="github-text"><img class="github" src="assets/Octocat.png"> Check out my <a class="important-link" href="https://github.com/s33r">Github</a>!</p>
+
     <project-tile project-name="'Holland America Homepage'" description-template="'src/templates/project.hal.tpl.html'" image-url="'assets/hal.png'" live-url="'http://www.hollandamerica.com'"></project-tile>
     <project-tile project-name="'Seabourn America Homepage'" description-template="'src/templates/project.sbn.tpl.html'" image-url="'assets/sbn.png'" live-url="'http://www.seabourn.com'"></project-tile>
     <project-tile project-name="'Holland America Guest Mobile'" description-template="'src/templates/project.halmobile.tpl.html'" image-url="'assets/ship.png'" local-url="'assets/ship'"></project-tile>
