--- a/src/views/portfolio/portfolio.tpl.html
+++ b/src/views/portfolio/portfolio.tpl.html
@@ -1,5 +1,5 @@
 <div class="portfolio">
-    <h1>Portfolio</h1>
+    <h1 class="page-title">Portfolio</h1>
 
     <p class="github-text"><img class="github" src="assets/Octocat.png"> Check out my <a class="important-link" href="https://github.com/s33r">Github</a>!</p>
 
