--- a/src/views/contact/contact.tpl.html
+++ b/src/views/contact/contact.tpl.html
@@ -1,4 +1,13 @@
 <div class="contact">
     <h1 class="page-title">Contact</h1>
 
+    <ul>
+        <li><a title="email" class="important-link" href="mailto:aaronchristopherw@gmail.com"><i class="fa fa-envelope-square"></i></a></li>
+        <li><a title="Linkedin Profile" class="important-link" href="http://www.linkedin.com/in/aaronwillows"><i class="fa fa-linkedin-square"></i></a></li>
+        <li><a title="Github Profile" class="important-link" href="https://github.com/s33r"><i class="fa fa-github-square"></i></a></li>
+    </ul>
+
+    <p class="contact-message"><i class="fa fa-arrow-up"></i> Please feel free to contact me using one of the above services! <i class="fa fa-arrow-up"></i> </p>
+    <p class="disclaimer">I'm not actively looking for full time work, but if you have a small project you need help with let me know. I live and work in the <strong>Seattle Area</strong>, but I'm open to remote work and travel (schedule allowing).</p>
+
 </div>
