Added CSS animations for state route navigation.

--- a/src/views/home/home.less
+++ b/src/views/home/home.less
@@ -1,7 +1,12 @@
 .home {
-  position:absolute;
-  width: 100%;
-  bottom: 33%;
+
+  .menu-container {
+    position:fixed;
+    width: 100%;
+    bottom: 33%;
+  }
+
+
 
   .name {
     padding-left: 25%;
