--- a/src/views/home/home.tpl.html
+++ b/src/views/home/home.tpl.html
@@ -1,4 +1,6 @@
 <div class="home">
+
+    <div class="menu-container">
     <h1 class="name">Aaron Willows</h1>
 
     <ul class="main-menu">
@@ -9,4 +11,5 @@
     </ul>
 
     <p class="hero-text">Front End / JavaScript / UX Developer</p>
+    </div>
 </div>
