--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,6 +1,6 @@
 @import "reset";
 @import "variables";
-
+@import "animations";
 
 html {
   color: white;
@@ -20,6 +20,7 @@ html {
 
 body {
   padding-top: @navHeight;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -58,6 +59,13 @@ strong {
   margin-bottom: 1rem;
   text-align: center;
 }
+
+
+
+
+
+
+
 
 @import '../components/directives/navBar/navBar';
 @import '../components/directives/footerNav/footerNav';
