--- a/src/styles/animations.less
+++ b/src/styles/animations.less
@@ -1,51 +1,72 @@
-.ng-enter {
-  position: absolute;
-  left: -100%;
-  width: 100%;
-  //  top: @navHeight;
-
-  background: transparent;
-  -webkit-animation: ng-enter 2s forwards;
-  animation: ng-enter 2s forwards;
+.hover-mask {
+  border: solid medium transparent;
 
 }
 
-@-webkit-keyframes ng-enter {
+.hover-mask:hover {
+  -webkit-filter: saturate(200%);
+  -moz-filter: saturate(200%);
+  -ms-filter: saturate(200%);
+  filter: saturate(200%);
+
+  border: solid medium @importantLinkColor;
+}
+
+
+
+
+@media @desktopQuery, @tabletQuery {
+  .ng-enter {
+    position: absolute;
+    left: -100%;
+    width: 100%;
+    //  top: @navHeight;
+
+    background: transparent;
+    -webkit-animation: ngEnter 2s forwards;
+    animation: ngEnter 2s forwards;
+  }
+
+  .ng-leave {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    //  top: @navHeight;
+
+    background: transparent;
+    -webkit-animation: ngLeave 2s forwards;
+    animation: ngLeave 2s forwards;
+
+  }
+}
+
+
+// Note: Keep keyframes outside of the media query, it will break ie (of course) if they are inside.
+@-webkit-keyframes ngEnter {
   100% {
     //    position: static;
     left: 0;
   }
 }
 
-@keyframes ng-enter {
+
+@keyframes ngEnter {
   100% {
     //    position: static;
     left: 0;
   }
 }
 
-.ng-leave {
-  position: absolute;
-  width: 100%;
-  left: 0;
-  //  top: @navHeight;
-
-  background: transparent;
-  -webkit-animation: ng-leave 2s forwards;
-  animation: ng-leave 2s forwards;
-
+@-webkit-keyframes ngLeave {
+100% {
+  position: relative;
+  left: 100%;
+}
 }
 
-@-webkit-keyframes ng-leave {
-  100% {
-    position: relative;
-    left: 100%;
-  }
+@keyframes ngLeave {
+100% {
+  position: relative;
+  left: 100%;
 }
-
-@keyframes ng-leave {
-  100% {
-    position: relative;
-    left: 100%;
-  }
 }
