--- a/src/views/fourohfour/fourohfour.tpl.html
+++ b/src/views/fourohfour/fourohfour.tpl.html
@@ -1,4 +1,9 @@
-<section>
-    <h1>404 - This page isn't available</h1>
-    <p><a href="/">Return Home</a></p>
-</section>
+<div class="fourohfour">
+    <h1 class="page-title"><i class="fa fa-exclamation-circle"></i> 404 - Spooky... this page isn't really here.</h1>
+    <p>
+        There's only like, 5 pages... <a class="important-link" href="#/"> <i class="fa fa-home"></i> Return Home</a>
+
+    </p>
+
+    <img src="assets/ghost-md.png">
+</div>
