--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -15,9 +15,9 @@
 
 
 // Text Colors ////////////////////////////////////////////////////////////////////////////////////////////////////////
-@copyTextColor: white;
-@strongTextColor: lightskyblue;
-@importantLinkColor: gold;
+@copyTextColor: #FFFFFF;
+@strongTextColor: #87CEFA;
+@importantLinkColor: #FFD700;
 @normalLinkColor: #CCC;
 @linkHover: #DDD;
 @linkShadow: 1px 1px 0 rgba(140,140,140,0.6) , -1px -1px 1px rgba(0,0,0,0.67);
