--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -10,6 +10,8 @@ html {
 
   background-color: #00A3EF;
 
+  background-attachment: fixed;
+
   background-image: -ms-linear-gradient(top left, #000000 0%, #00A3EF 100%);
   background-image: -moz-linear-gradient(top left, #000000 0%, #00A3EF 100%);
   background-image: -o-linear-gradient(top left, #000000 0%, #00A3EF 100%);
