--- a/src/views/resume/resume.tpl.html
+++ b/src/views/resume/resume.tpl.html
@@ -1,4 +1,24 @@
 <div class="resume">
     <h1 class="page-title">Resume</h1>
 
+
+    <ul>
+        <li><a title="pdf resume" class="important-link" href=""><i class="fa fa-file-pdf-o"></i></a></li>
+        <li><a title="word resume" class="important-link" href=""><i class="fa fa-file-word-o"></i></a></li>
+        <li><a title="print resume" class="important-link" href=""><i class="fa fa-print"></i></a></li>
+    </ul>
+
+
+    <h2>Holland America Line
+        <span>Front End / UX Developer</span>
+    </h2>
+    <h2>Holland America Line
+        <span>Web Applications Support Developer</span>
+    </h2>
+    <h2>SEL
+        <span>Test</span>
+    </h2>
+
+
+
 </div>
