--- a/src/components/directives/navBar/navBar.tpl.html
+++ b/src/components/directives/navBar/navBar.tpl.html
@@ -1,12 +1,12 @@
 <div class="nav-bar">
-    <h1><a href="#/">Aaron Willows</a></h1>
+    <h1><a class="nav-link" href="#/">Aaron Willows</a></h1>
     <button class="mobile-menu-button" ng-click="toggleMobileMenu()"><i class="fa fa-bars"></i></button>
     <nav>
         <ul class="nav-menu" ng-class="{'mobile-visible': mobileMenuOpen}">
-            <li><a ng-class="{'current': currentItem.name === 'portfolio'}" href="#/portfolio">Portfolio</a></li>
-            <li><a ng-class="{'current': currentItem.name === 'resume'}" href="#/resume">Resume</a></li>
-            <li><a ng-class="{'current': currentItem.name === 'about'}" href="#/about">About</a></li>
-            <li><a ng-class="{'current': currentItem.name === 'contact'}" class="important-link" href="#/contact"><i class="fa fa-send"></i>  Contact</a></li>
+            <li><a ng-class="{'current': currentItem.name === 'portfolio'}" class="nav-link" href="#/portfolio">Portfolio</a></li>
+            <li><a ng-class="{'current': currentItem.name === 'resume'}" class="nav-link" href="#/resume">Resume</a></li>
+            <li><a ng-class="{'current': currentItem.name === 'about'}"  class="nav-link" href="#/about">About</a></li>
+            <li><a ng-class="{'current': currentItem.name === 'contact'}" class="nav-link important-link" href="#/contact"><i class="fa fa-send"></i>  Contact</a></li>
         </ul>
     </nav>
 </div>
