--- a/src/styles/animations.less
+++ b/src/styles/animations.less
@@ -9,7 +9,7 @@
   -ms-filter: saturate(200%);
   filter: saturate(200%);
 
-  border: solid medium @importantLinkColor;
+  border: solid medium @navImportantLinkColor;
 }
 
 
