--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -58,14 +58,28 @@
 /* http://paletton.com */
 
 
+
+
+
+
+
+
 // Text Colors ////////////////////////////////////////////////////////////////////////////////////////////////////////
-@copyTextColor: #FFFFFF;
+@copyTextColor: black;
 @strongTextColor: #87CEFA;
-@importantLinkColor: #FFD700;
-@normalLinkColor: #CCC;
-@linkHover: #DDD;
-@linkShadow: 1px 1px 0 rgba(140,140,140,0.6) , -1px -1px 1px rgba(0,0,0,0.67);
+
+
+
+@navLinkColor: #CCC;
+@navLinkHover: #DDD;
+@navImportantLinkColor: #FFD700;
+@navLinkShadow: 1px 1px 0 rgba(140,140,140,0.6) , -1px -1px 1px rgba(0,0,0,0.67);
+
+@linkColor: rgba(2,138,226,1);
+@linkHoverColor: rgba(0, 73,120,1);
 
 // Panel Colors ///////////////////////////////////////////////////////////////////////////////////////////////////////
-@panelBackgroundColor: #515151;
+@panelBackgroundColor: white;//#515151;
 @menuBackgroundColor: #000000;
+
+
