--- a/src/views/home/home.less
+++ b/src/views/home/home.less
@@ -26,9 +26,11 @@
 
 
   .main-menu {
+
     text-align: center;
 
-    background-color: @panelBackgroundColor;
+    background-color: black;
+//    background-color: @panelBackgroundColor;
 
     padding-bottom: .1rem;
     padding-top: .1rem;
@@ -39,7 +41,7 @@
     font-size: 2rem;
 
     a:hover {
-      color: @importantLinkColor;
+      color: @navImportantLinkColor;
     }
 
     li {
