--- a/src/views/resume/resume.tpl.html
+++ b/src/views/resume/resume.tpl.html
@@ -2,23 +2,99 @@
     <h1 class="page-title">Resume</h1>
 
 
-    <ul>
-        <li><a title="pdf resume" class="important-link" href=""><i class="fa fa-file-pdf-o"></i></a></li>
-        <li><a title="word resume" class="important-link" href=""><i class="fa fa-file-word-o"></i></a></li>
-        <li><a title="print resume" class="important-link" href=""><i class="fa fa-print"></i></a></li>
+    <ul class="link-list">
+        <li><a title="pdf resume" class="resume-link" href=""><i class="fa fa-file-pdf-o"></i></a></li>
+        <li><a title="word resume" class="resume-link" href=""><i class="fa fa-file-word-o"></i></a></li>
+        <li><a title="print resume" class="resume-link" href=""><i class="fa fa-print"></i></a></li>
     </ul>
 
 
-    <h2>Holland America Line
-        <span>Front End / UX Developer</span>
-    </h2>
-    <h2>Holland America Line
-        <span>Web Applications Support Developer</span>
-    </h2>
-    <h2>SEL
-        <span>Test</span>
-    </h2>
+    <section>
+        <h2>Overview</h2>
+        <p>Software developer with two years experience in developing and maintaining large scale web applications. Comfortable with back end or front end development. Knowledge of latest front end frameworks and technologies like AngularJS, jQuery, HTML5, CSS3. Excels at quickly learning new things and finding process improvements.</p>
+    </section>
 
+    <section>
+        <h2>Skills</h2>
+        <dl>
+            <dt>Languages</dt>
+            <dd>JavaScript, Java, C#, C++</dd>
+
+            <dt>Architectural &amp; Design Patterns</dt>
+            <dd>MVC, MVVM, REST, Responsive CSS</dd>
+
+            <dt>Markup / Data Languages</dt>
+            <dd>HTML5, XML, CSS3, JSON</dd>
+
+            <dt>Server Side Frameworks / Libraries</dt>
+            <dd>Spring, Struts2, Hibernate, JSTL, J2EE</dd>
+
+            <dt>Client Side Frameworks / Libraries</dt>
+            <dd>AngularJS, jQuery, Bootstrap</dd>
+
+            <dt>Application Environments</dt>
+            <dd>Linux, Windows, NodeJS, .NET, JBoss, Tomcat, iOS</dd>
+
+            <dt>Development Tools</dt>
+            <dd>InteliJ, Webstorm, Eclipse, Visual Studio, Grunt, Bower, Yeoman</dd>
+
+            <dt>Source Control</dt>
+            <dd>Git, SVN</dd>
+
+            <dt>Databases</dt>
+            <dd>Oracle 11g, MySql, MongoDB</dd>
+        </dl>
+    </section>
+
+    <section>
+        <h2>Experience</h2>
+        <h3>Holland America Line
+            <span class="subtitle"><time datetime="2014-09-01">September 2014</time> - <time datetime="2015-02-26">February 2015</time></span>
+            <span class="subtitle">Front End / UX Developer</span>
+        </h3>
+
+        <ul class="experience-list">
+            <li>Developed responsive, single page web applications using AngularJS, HTML5, JavaScript and CSS3.</li>
+            <li>Practiced test driven development using Karma & Jasmine to improve code quality.</li>
+            <li>Implemented UI / UX designs for mobile and desktop focused applications.</li>
+            <li>Provide technical expertise related to JavaScript and front end application architecture.</li>
+            <li>Front end developer for Holland America’s new guest facing mobile web application.</li>
+        </ul>
+
+
+
+        <h3>Holland America Line
+            <span class="subtitle"><time datetime="2012-08-28">August 2012</time> - <time datetime="2014-09-01">September 2014</time></span>
+            <span class="subtitle">Web Applications Support Developer</span>
+        </h3>
+
+        <ul class="experience-list">
+            <li>Developed client side MVC applications using JavaScript, HTML5 and CSS3.</li>
+            <li>Advocated to make AngularJS the standard front end framework for Holland America’s front end projects.</li>
+            <li>Designed the front end AngularJS architecture, based on ngBoilerplate, now in use by several teams. This architecture uses: Grunt, Bower, Karma, Jasmine, Bootstrap, AngularJS and a variety of other libraries.</li>
+            <li>Developed a Yeoman generator for creating new applications using this architecture.</li>
+            <li>Designed and implemented the front end portion of the new AngularJS Holland America and Seabourn homepages.</li>
+            <li>Used AngularJS to develop an internal crew facing application.</li>
+            <li>Supported legacy Java web applications that were built around struts2, spring and hibernate.</li>
+        </ul>
+
+
+        <h3>Schweitzer Engineering Laboratories
+            <span class="subtitle"><time datetime="2012-01-28">January 2012</time> - <time datetime="2014-08-27">August 2012</time></span>
+            <span class="subtitle">Test Operator</span>
+        </h3>
+
+        <ul class="experience-list">
+            <li>Operate automated test fixtures to functionally and environmentally test power protection and SCADA devices</li>
+            <li>Preform first line troubleshooting to recognize product defects.</li>
+            <li>Track WIP units and ensure that high priority units were tested first.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Education</h2>
+        <p>Central Washington University 2006 - 2010</p>
+    </section>
 
 
 </div>
