--- a/src/components/directives/footerNav/footerNav.tpl.html
+++ b/src/components/directives/footerNav/footerNav.tpl.html
@@ -1,3 +1,5 @@
 <div class="footer-nav">
-    <a class="important-link" href="{{ nextItem.url }}">{{ nextItem.name }} <i class="fa fa-arrow-right"></i></a>
+    <a class="nav-link important-link" href="{{ nextItem.url }}">{{ nextItem.name }} <i class="fa fa-arrow-right"></i></a>
+    <p class="copyright">&copy; 2015 Aaron Willows</p>
+
 </div>
