--- a/src/components/directives/projectTile/projectTile.tpl.html
+++ b/src/components/directives/projectTile/projectTile.tpl.html
@@ -5,9 +5,9 @@
     <div class="text-panel">
         <h2>{{ projectName }}</h2>
         <ul>
-            <li title="The live version may have changed significantly since I worked on it." ng-show="liveUrl"><a class="project-link" href="{{ liveUrl }}">Live Version</a> <i class="note fa fa-asterisk"></i></li>
-            <li ng-show="localUrl"><a class="project-link" href="{{ localUrl }}">Local Version</a></li>
-            <li><a class="project-link link-screenshot" href="{{ imageUrl }}" target="_blank">Screenshot</a></li>
+            <li title="The live version may have changed significantly since I worked on it." ng-show="liveUrl"><a class="body-link project-link" href="{{ liveUrl }}">Live Version</a></li>
+            <li ng-show="localUrl"><a class="body-link project-link" href="{{ localUrl }}">Local Version</a></li>
+            <li><a class="body-link project-link link-screenshot" href="{{ imageUrl }}" target="_blank">Screenshot</a></li>
         </ul>
 
         <ng-include src="descriptionTemplate"></ng-include>
