--- a/src/views/home/home.tpl.html
+++ b/src/views/home/home.tpl.html
@@ -4,10 +4,10 @@
     <h1 class="name">Aaron Willows</h1>
 
     <ul class="main-menu">
-        <li><a href="#/portfolio">Portfolio</a></li>
-        <li><a href="#/resume">Resume</a></li>
-        <li><a href="#/about">About</a></li>
-        <li><a href="#/contact">Contact</a></li>
+        <li><a class="nav-link" href="#/portfolio">Portfolio</a></li>
+        <li><a class="nav-link" href="#/resume">Resume</a></li>
+        <li><a class="nav-link" href="#/about">About</a></li>
+        <li><a class="nav-link" href="#/contact">Contact</a></li>
     </ul>
 
     <p class="hero-text">Front End / JavaScript / UX Developer</p>
