--- a/src/views/resume/resume.less
+++ b/src/views/resume/resume.less
@@ -1,25 +1,86 @@
 .resume {
-  li {
-    display: inline-block;
-    margin-right: 1rem;
+  section {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
-  li:last-of-type {
-    margin: 0;
+  section:last-of-type {
+    margin-bottom: 2rem;
   }
 
-  ul {
+  .resume-link {
+    font-size: 8rem;
+    color: @linkColor;
+    text-decoration: none;
+
+    &:hover {
+      color: @linkHoverColor;
+    }
+  }
+
+  .link-list {
     text-align: center;
+
+    li {
+      display: inline-block;
+      margin-right: 1rem;
+
+      &:last-of-type {
+        margin: 0;
+      }
+    }
   }
 
-  a {
-    font-size: 2rem;
+  .experience-list {
+    margin-left: 4rem;
+    li {
+      display: list-item;
+      margin-bottom: .5rem;
+      list-style: disc;
+    }
   }
+
+  h2 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+  }
+
+  h3 {
+    font-size: 1.25rem;
+    margin-bottom: 1rem;
+    margin-bottom: .5rem;
+  }
+
+  .subtitle {
+    font-size: 1rem;
+    font-weight: normal;
+  }
+
+  .subtitle:last-of-type {
+    padding-left: 2rem;
+    display: block;
+    font-style: oblique;
+    font-size: 1.25rem;
+  }
+
+  dt {
+    font-weight: bold;
+    padding-bottom: .5rem;
+    padding-top: .5rem;
+  }
+
+  dd {
+    padding-left: 3rem;
+  }
+
+
+
 }
 
 @media @handsetQuery {
   .resume {
-    a {
+    .resume-link {
       font-size: 6rem;
     }
   }
