Added background. Fixed bug where mobile nav wouldn't close after clicking link.

--- a/src/components/directives/projectTile/projectTile.less
+++ b/src/components/directives/projectTile/projectTile.less
@@ -4,6 +4,11 @@
   padding-bottom: 1rem;
   padding-top: 1rem;
 
+  .screenshot-link {
+    text-decoration: none;
+    color: @linkColor;
+  }
+
   .screenshot {
     max-width: 33%;
     max-height: 33%;
