--- a/src/components/directives/projectTile/projectTile.tpl.html
+++ b/src/components/directives/projectTile/projectTile.tpl.html
@@ -1,6 +1,8 @@
 <div class="project-tile">
 
-    <a href="{{imageUrl}}" target="_blank"><img class="screenshot hover-mask" ng-src="{{imageUrl}}"></a>
+    <a href="{{imageUrl}}" target="_blank" class="screenshot-link">
+        <img class="screenshot hover-mask" ng-src="{{imageUrl}}">
+    </a>
 
     <div class="text-panel">
         <h2>{{ projectName }}</h2>
