--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -21,6 +21,9 @@ html {
 }
 
 body {
+  background-image: url('test.jpg');
+  background-size: cover;
+  background-attachment: fixed;
 
   overflow-x: hidden;
 }
