--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -79,7 +79,7 @@
 @linkHoverColor: rgba(0, 73,120,1);
 
 // Panel Colors ///////////////////////////////////////////////////////////////////////////////////////////////////////
-@panelBackgroundColor: white;//#515151;
+@panelBackgroundColor: transparent;//#515151;
 @menuBackgroundColor: #000000;
 
 
