--- a/src/components/directives/navBar/navBar.tpl.html
+++ b/src/components/directives/navBar/navBar.tpl.html
@@ -3,10 +3,10 @@
     <button class="mobile-menu-button" ng-click="toggleMobileMenu()"><i class="fa fa-bars"></i></button>
     <nav>
         <ul class="nav-menu" ng-class="{'mobile-visible': mobileMenuOpen}">
-            <li><a ng-class="{'current': currentItem.name === 'portfolio'}" class="nav-link" href="#/portfolio">Portfolio</a></li>
-            <li><a ng-class="{'current': currentItem.name === 'resume'}" class="nav-link" href="#/resume">Resume</a></li>
-            <li><a ng-class="{'current': currentItem.name === 'about'}"  class="nav-link" href="#/about">About</a></li>
-            <li><a ng-class="{'current': currentItem.name === 'contact'}" class="nav-link important-link" href="#/contact"><i class="fa fa-send"></i>  Contact</a></li>
+            <li><a ng-class="{'current': currentItem.name === 'portfolio'}" class="nav-link" href="#/portfolio" ng-click="hideMobileMenu()">Portfolio</a></li>
+            <li><a ng-class="{'current': currentItem.name === 'resume'}" class="nav-link" href="#/resume" ng-click="hideMobileMenu()">Resume</a></li>
+            <li><a ng-class="{'current': currentItem.name === 'about'}"  class="nav-link" href="#/about" ng-click="hideMobileMenu()">About</a></li>
+            <li><a ng-class="{'current': currentItem.name === 'contact'}" class="nav-link important-link" href="#/contact" ng-click="hideMobileMenu()"><i class="fa fa-send"></i>  Contact</a></li>
         </ul>
     </nav>
 </div>
