--- a/src/views/about/about.tpl.html
+++ b/src/views/about/about.tpl.html
@@ -3,7 +3,5 @@
 
     <p>I've been writing software professionally for 2 1/2 years, but I started programming many years before that.</p>
 
-    <p>I am a software developer working in the Seattle area. I love learning new things and solving problems. In my free time, I enjoy traveling, hiking and playing video games... oh yeah and eating.</p>
-
-
+    <p>I am a software developer working in the Seattle area. I love learning new things and solving problems. In my free time, I enjoy traveling, hiking and playing video games with friends.</p>
 </div>
