Made backgrounds dynamic per page

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -21,11 +21,16 @@ html {
 }
 
 body {
+
+
+  overflow-x: hidden;
+}
+
+
+.main-background {
   background-image: url('test.jpg');
   background-size: cover;
   background-attachment: fixed;
-
-  overflow-x: hidden;
 }
 
 .main-view {
