Fleshed out about page.

--- a/src/views/about/about.tpl.html
+++ b/src/views/about/about.tpl.html
@@ -1,7 +1,44 @@
 <div class="about">
     <h1 class="page-title">About</h1>
 
-    <p>I've been writing software professionally for 2 1/2 years, but I started programming many years before that.</p>
+    <p class="intro-text">Hi! I'm a software developer in the Seattle Area. I started writing code when I was very young, but I have been developing software professionally for 2 1/2 years</p>
 
-    <p>I am a software developer working in the Seattle area. I love learning new things and solving problems. In my free time, I enjoy traveling, hiking and playing video games with friends.</p>
+    <p class="intro-text">Most of my career has been spent in developing web applications. Though technology changes rapidly, some things are always true. These values inform every project I work on.</p>
+
+    <section>
+        <h2>User Focused</h2>
+
+        <ul class="icon-list">
+            <li><i class="fa fa-users fa-5x"></i></li>
+        </ul>
+
+        <p>Applications are built for users not businesses. Whether they are internal or external, customers should always have a pleasing and effective user experience.</p>
+
+    </section>
+
+
+    <section>
+        <h2>Responsive</h2>
+
+        <ul class="icon-list">
+            <li><i class="fa fa-desktop fa-5x"></i></li>
+            <li><i class="fa fa-tablet fa-5x"></i></li>
+            <li><i class="fa fa-mobile fa-5x"></i></li>
+        </ul>
+
+        <p>Applications should be usable across a number of devices, form factors and displays. The best way to accomplish this is to use a mobile first design and responsive technology.</p>
+    </section>
+
+
+    <section>
+        <h2>Maintainable</h2>
+
+        <ul class="icon-list">
+            <li><i class="fa fa-code-fork fa-5x"></i></li>
+        </ul>
+
+        <p>Applications should be built to be maintained. Not only does this save money it allows creative freedom throughout the application lifecycle.</p>
+
+    </section>
+
 </div>
