--- a/src/views/about/about.less
+++ b/src/views/about/about.less
@@ -1,3 +1,43 @@
 .about {
+  i {
+    color: @rgba-complement-0;
+  }
 
+  .intro-text {
+    text-align: center;
+    padding-bottom: 2rem;
+  }
+
+  .icon-list {
+    margin-bottom: 1rem;
+
+    li {
+      display: inline-block;
+      margin-right: 1rem;
+
+
+      &:last-of-type {
+        margin: 0;
+      }
+    }
+  }
+
+  section {
+    text-align: center;
+
+    p {
+      font-size: 1.25rem;
+    }
+  }
+
+  section:last-of-type {
+    margin-bottom: 2rem;
+  }
+
+  h2 {
+
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+  }
 }
