Added date to portfolio projects.

--- a/src/components/directives/projectTile/projectTile.less
+++ b/src/components/directives/projectTile/projectTile.less
@@ -4,6 +4,12 @@
   padding-bottom: 1rem;
   padding-top: 1rem;
 
+  span {
+    font-size: 1.25rem;
+    font-weight: normal;
+    font-style: oblique;
+  }
+
   .screenshot-link {
     text-decoration: none;
     color: @linkColor;
