--- a/src/views/resume/resume.tpl.html
+++ b/src/views/resume/resume.tpl.html
@@ -2,10 +2,17 @@
     <h1 class="page-title">Resume</h1>
 
     <ul class="link-list">
-        <li><a title="pdf resume" class="resume-link" href=""><i class="fa fa-file-pdf-o"></i></a></li>
-        <li><a title="word resume" class="resume-link" href=""><i class="fa fa-file-word-o"></i></a></li>
-        <li><a title="print resume" class="resume-link" href=""><i class="fa fa-print"></i></a></li>
+        <li><a title="word resume" class="resume-link" href="assets/resume.docx"><i class="fa fa-file-word-o"></i></a></li>
+        <li><a title="word resume" class="resume-link" href="assets/resume.pdf"><i class="fa fa-file-pdf-o"></i></a></li>
+        <li><a title="print resume" class="resume-link" ng-click="printPage()"><i class="fa fa-print"></i></a></li>
     </ul>
+
+    <section class="print-section">
+        <h1 class="print-title">Aaron Willows</h1>
+        <p>aaronchristopherw@gmail.com</p>
+        <p>http://aaronwillows.com</p>
+        <p>https://github.com/s33r</p>
+    </section>
 
     <section>
         <h2>Overview</h2>
