--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,6 +1,7 @@
 @handsetQuery: ~"screen and (max-width:599px)";
 @tabletQuery: ~"screen and (min-width:600px) and (max-width:1024px)";
 @desktopQuery: ~"screen and (min-width:1025px)";
+@printQuery: ~"print";
 
 @navHeight: 2.5rem;
 
