--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -17,12 +17,12 @@
   @color-full: rgba(red(@color), green(@color), blue(@color), 1);
   @color-transparent: rgba(red(@color), green(@color), blue(@color), 0);
 
-  background: -moz-linear-gradient(45deg, @color-full 0%, @color-transparent 52%, @color-full 100%);
-  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,@color-full), color-stop(52%,@color-transparent), color-stop(100%,@color-full));
-  background: -webkit-linear-gradient(45deg, @color-full 0%, @color-transparent 52%, @color-full 100%);
-  background: -o-linear-gradient(45deg, @color-full 0%, @color-transparent 52%, @color-full 100%);
-  background: -ms-linear-gradient(45deg, @color-full 0%, @color-transparent 52%, @color-full 100%);
-  background: linear-gradient(45deg, @color-full 0%, @color-transparent 52%, @color-full 100%);
+  background-image: -moz-linear-gradient(45deg, @color-full 0%, @color-transparent 52%, @color-full 100%);
+  background-image: -webkit-gradient(linear, left bottom, right top, color-stop(0%,@color-full), color-stop(52%,@color-transparent), color-stop(100%,@color-full));
+  background-image: -webkit-linear-gradient(45deg, @color-full 0%, @color-transparent 52%, @color-full 100%);
+  background-image: -o-linear-gradient(45deg, @color-full 0%, @color-transparent 52%, @color-full 100%);
+  background-image: -ms-linear-gradient(45deg, @color-full 0%, @color-transparent 52%, @color-full 100%);
+  background-image: linear-gradient(45deg, @color-full 0%, @color-transparent 52%, @color-full 100%);
 }
 
 
