--- a/src/components/directives/navBar/navBar.tpl.html
+++ b/src/components/directives/navBar/navBar.tpl.html
@@ -1,6 +1,6 @@
 <div class="nav-bar">
     <h1><a class="nav-link" href="#/">Aaron Willows</a></h1>
-    <button class="mobile-menu-button" ng-click="toggleMobileMenu()"><i class="fa fa-bars"></i></button>
+    <button class="mobile-menu-button" ng-click="toggleMobileMenu($event)"><i class="fa fa-bars"></i></button>
     <nav>
         <ul class="nav-menu" ng-class="{'mobile-visible': mobileMenuOpen}">
             <li><a ng-class="{'current': currentItem.name === 'portfolio'}" class="nav-link" ng-click="hideMobileMenu('portfolio')">Portfolio</a></li>
